--- a/subrepo/signup.html
+++ b/subrepo/signup.html
@@ -4,12 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Signup Form</title>
 </head>
 
-<body>
-    <h1>Hello</h1>
-    <h2>Bodybuilder</h2>
+<body
+    style="font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
+    <div
+        style="background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); width: 300px;">
+        <form style="display: flex; flex-direction: column;">
+            <h2 style="margin-bottom: 20px; text-align: center;">Sign Up</h2>
+            <label for="username" style="margin-bottom: 5px;">Username</label>
+            <input type="text" id="username" name="username" required
+                style="margin-bottom: 15px; padding: 10px; border: 1px solid #ccc; border-radius: 4px;">
+
+            <label for="email" style="margin-bottom: 5px;">Email</label>
+            <input type="email" id="email" name="email" required
+                style="margin-bottom: 15px; padding: 10px; border: 1px solid #ccc; border-radius: 4px;">
+
+            <label for="password" style="margin-bottom: 5px;">Password</label>
+            <input type="password" id="password" name="password" required
+                style="margin-bottom: 15px; padding: 10px; border: 1px solid #ccc; border-radius: 4px;">
+
+            <label for="confirm-password" style="margin-bottom: 5px;">Confirm Password</label>
+            <input type="password" id="confirm-password" name="confirm-password" required
+                style="margin-bottom: 15px; padding: 10px; border: 1px solid #ccc; border-radius: 4px;">
+
+            <button type="submit"
+                style="padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer;">Sign
+                Up</button>
+        </form>
+    </div>
 </body>
 
 </html>
